--- a/12SUM/bin/.gitignore
+++ b/12SUM/bin/.gitignore
@@ -1,9 +1,9 @@
-#/AudioRecorder.class
-#/BeatMaker.class
-#/Draggable.class
-#/LoopLibrary.class
-#/PianoMaker.class
-#/Recorder$1.class
-#/Recorder.class
-#/SmartPanel.class
-#/test.class
+/AudioRecorder.class
+/BeatMaker.class
+/Draggable.class
+/LoopLibrary.class
+/PianoMaker.class
+/Recorder$1.class
+/Recorder.class
+/SmartPanel.class
+/test.class
